[package]
name = "qx_rs_server_sqlx"
version = "0.1.0"
edition = "2021"

authors = ["labi3285 <766043285@qq.com>"]
description = "best practice of server sqlx in rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/labi3285/qx_rs_server_sqlx"
homepage = "https://github.com/labi3285/qx_rs_server_sqlx"
keywords = ["server", "axum"]
categories = ["web-programming"]

[dependencies]

qx_rs_server = "0.1.0"

tracing = "0.1.40"
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-rustls"] }
sqlx-cli = "0.7.4"
once_cell = "1.19.0"

lazy_static = "1.4.0"

state = { version = "0.6.0", features = ["tls"] }





